Ibrahim-alan-md ⏳

--- a/media/oreo-shizo.html
+++ b/media/oreo-shizo.html
@@ -29,6 +29,6 @@
   </style>
 </head>
 <body>
-  <div id="centerText">OREO-BOT 🍪 by Shizo Developer 🥵 is Running 🔥</div>
+  <div id="centerText">ALAN;WALKER-MD 🍪 by Ibrahim Developer 🥵 is Running 🔥</div>
 </body>
 </html>
